--- a/window-escopo-outros/index.html
+++ b/window-escopo-outros/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Objeto Window escopo e outros</h1>
     
-    <script src="./JS/objeto-window.js"></script>
+    <script src="./JS/escopo-variaveis.js"></script>
 </body>
 </html>
